# control_y_programacion_de_robots

./: .gitignore  README.md
src/keyboard_control/src/: keyboard_control_plus.cpp
src/localization/: CMakeLists.txt  README.md  package.xml
src/localization/config/: localization_params.yaml
src/localization/include/localization/: lse.hpp  pf.hpp
src/localization/launch/: lse.launch  pf.launch  pf_movement.launch
src/localization/scenes/: lse_scene.ttt  pf_scene.ttt
src/localization/src/: lse.cpp  pf.cpp
src/localization/srv/: SetEstimation.srv
src/motion/: CMakeLists.txt  package.xml
src/motion/include/motion/: motion_model.hpp  motion_model_noise.hpp  pf_based_motion.hpp
src/motion/src/: motion_model.cpp  motion_model_noise.cpp  pf_based_motion.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/navigation/: reactive.hpp
src/navigation/src/: reactive.cpp
